@@ -1,3 +1,13 @@
+2008-05-24  Marcus Meissner  <marcus@jet.franken.de>
+
+	* gphoto2/{main.c,main.h,shell.c}:
+
+	  --capture-image split into:
+
+		--capture-image: just capture the image
+		--capture-image-and-download:
+			capture the image and download it.
+
 2007-10-28  Dan Fandrich  <dan@coneharvesters.com>
 	    Marcus Meissner  <marcus@jet.franken.de>
 	* tests/**: Start of a testsuite from Dan.
